--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "glob": "^7.1.4",
-    "multer": "^1.4.2"
+    "pdf-lib": "^0.6.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
