--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
+    "react-dnd": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-pdf": "^4.1.0",
