--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "react": "^16.8.6",
     "react-dnd": "^9.3.2",
     "react-dom": "^16.8.6",
-    "react-draggable": "^3.3.0",
     "react-pdf": "^4.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
