--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
+    "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
+    "express-validator": "^5.3.1",
     "glob": "^7.1.4",
-    "pdf-lib": "^0.6.4"
+    "node-pg-migrate": "^3.21.1",
+    "nodemailer": "^6.0.0",
+    "pdf-lib": "^0.6.4",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^4.44.2",
+    "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
