--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,8 +1,23 @@
 {
     "development" : {
-        "username": "niraj",
-        "password": "",
+        "username": "postgres",
+        "password": "root",
         "database": "esigndb",
-        "use_env_variable": ""
+        "host": "127.0.0.1",
+        "dialect": "postgres"
+    },
+    "test": {
+      "username": "root",
+      "password": null,
+      "database": "database_test",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
+    },
+    "production": {
+      "username": "root",
+      "password": null,
+      "database": "database_production",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
     }
-}
+  }
