--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
