--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "node-pg-migrate": "^3.21.1",
     "nodemailer": "^6.0.0",
+    "pdf-image": "^2.0.0",
     "pdf-lib": "^0.6.4",
     "pg": "^7.12.0",
     "pg-hstore": "^2.3.3",
