--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
+    "react-html-parser": "^2.0.2",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
