--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.1.5",
     "express-validator": "^5.3.1",
     "glob": "^7.1.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "multer": "^1.4.2",
     "node-pg-migrate": "^3.21.1",
