--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
