--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "bootstrap": "^4.3.1",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
+    "react-device-detect": "^1.7.5",
     "react-dnd": "^9.3.2",
     "react-dnd-html5-backend": "^9.3.2",
+    "react-dnd-touch-backend": "^9.3.4",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-html-parser": "^2.0.2",
